<resources>
    <string name="app_name">CS Quizzer</string>
    <!-- Home Fragment -->
    <string name="btn_find_questions">Find Questions</string>


    <!-- Login/Register activity -->
    <string name="first_name_hint">First Name …</string>
    <string name="last_name_hint">Last Name …</string>
    <string name="email_hint">Email …</string>
    <string name="username_hint">Username …</string>
    <string name="password_hint">Password …</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="register">Not a member? Click here to register!</string>
    <string name="login">Already registered? Click to Login!</string>
    <string name="logout">Sign Out</string>

    <!-- Reset/New Password activity -->
    <string name="vt_tologin">Back to Login!</string>
    <string name="btn_resetpassword">Reset Password</string>
    <string name="old_password">Old Password …</string>
    <string name="new_password">New Password …</string>
    <string name="confirm_password">Confirm Password …</string>
    <string name="btn_submit">Submit</string>

    <!-- About Us Fragment -->
    <string name="developer">Developer</string>
    <string name="developer_1">Bob Schimtz</string>
    <string name="developer_2">Phuc Pham N</string>

    <!-- Persistent preferences -->
    <string name="LOGIN_PREFS">edu.tacoma.uw.csquizzer.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="USERNAME">username</string>
    <string name="ADMIN">admin</string>

    <!-- Loading message -->
    <string name="wait_msg">\tPlease wait…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Bottom Menubar -->
    <string name="bmb_Home">Home</string>
    <string name="bmb_User">User</string>
    <string name="bmb_Repo">System</string>
    <string name="bmb_AboutUs">About Us</string>

    <!-- Number of Difficulties -->
    <string-array name="difficulties">
        <item>--- Choose Difficulty Questions ---</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <!-- Number of Types -->
    <string-array name="types">
        <item>--- Choose Type Questions ---</item>
        <item>True/False</item>
        <item>Single Choice</item>
        <item>Multiple Choice</item>
    </string-array>

    <!-- Number of Questions -->
    <string-array name="numQuestion">
        <item>--- Choose Number Questions ---</item>
        <item>10</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
    </string-array>

    <!-- Choose a question type -->
    <string name="tv_ChooseAQuestionType">Choose A Question Type</string>
    <string name="tv_SubmitAQuestionType">Submit</string>

    <!-- Add Courses -->
    <string name="tv_AddANewCourse">Add A New Course</string>
    <string name="tv_CourseName">Course Name</string>
    <string name="btn_AddCourse">Add Course</string>
    <string name="btn_ClearCourse">Clear</string>

    <!-- Edit Courses -->
    <string name="tv_EditACourse">Edit A Course</string>
    <string name="tv_EditCourseId">Course ID # </string>
    <string name="tv_EditCourseName">Course Name</string>
    <string name="btn_EditCourse">Edit Course</string>

    <!-- Add Topic -->
    <string name="tv_AddANewTopic">Add A New Topic</string>
    <string name="tv_TopicName">Topic Name</string>
    <string name="btn_AddTopic">Add Topic</string>
    <string name="btn_ClearTopic">Clear</string>

    <!-- Edit Topic -->
    <string name="tv_EditATopic">Edit A Topic</string>
    <string name="tv_EditTopicId">Topic ID # </string>
    <string name="tv_EditTopicName">Topic Name</string>
    <string name="btn_EditTopic">Edit Topic</string>


    <!-- Add Questions -->
    <string name="tv_AddANewQuestion">Add A New Question</string>
    <string name="tv_AddQuestionTitle">Question Title</string>
    <string name="tv_AddQuestionBody">Question Body</string>
    <string name="tv_AddQuestionCourse">Course Name</string>
    <string name="tv_AddQuestionTopic">Topic Name</string>
    <string name="tv_AddQuestionDifficulty">Difficulty</string>
    <string name="tv_AddQuestionAnswers">Answers</string>
    <string name="tv_AddQuestionCorrectAnswers">Correct Answers</string>
    <string name="btn_AddQuestion">Add Question</string>
    <string name="btn_CancelQuestion">Clear</string>
    <string name="cb_Answer1">Answer 1</string>
    <string name="cb_Answer2">Answer 2</string>
    <string name="cb_Answer3">Answer 3</string>
    <string name="cb_Answer4">Answer 4</string>
    <string name="rb_Answer1">Answer 1</string>
    <string name="rb_Answer2">Answer 2</string>
    <string name="rb_Answer3">Answer 3</string>
    <string name="rb_Answer4">Answer 4</string>

    <!-- Edit Questions -->
    <string name="tv_EditAQuestion">Edit A Question</string>
    <string name="tv_EditQuestionCourse">Course Name</string>
    <string name="tv_EditQuestionTopic">Topic Name</string>
    <string name="tv_EditQuestionDifficulty">Difficulty</string>
    <string name="tv_EditQuestionType">Type</string>

    <!-- Edit Answers -->
    <string name="tv_EditAnswers">Edit Answers</string>
    <string name="tv_EditQuestionId">Question ID # </string>
    <string name="tv_EditQuestionTitle">Question Title</string>
    <string name="tv_EditQuestionBody">Question Body</string>
    <string name="tv_EditQuestionAnswers">Answers</string>
    <string name="tv_EditQuestionCorrectAnswers">Correct Answers</string>
    <string name="tv_EditUpdateAnswers">Update Answers</string>
    <string name="tv_ClearAnswers">Clear</string>


    <!-- Show Question Detail -->
    <string name="tv_Question">Question </string>
    <string name="tv_Course">Course: </string>
    <string name="tv_Topic">Topic: </string>
    <string name="tv_Difficulty">Difficulty: </string>
    <string name="btn_CheckQuestion">Check Question</string>
    <string name="btn_ShowAnswer">Check Answer</string>
    <string name="btn_Report">Report</string>


    <!-- Repository Detail -->
    <string name="tv_UserRepo">User</string>
    <string name="tv_CourseRepo">Course</string>
    <string name="tv_TopicRepo">Topic</string>
    <string name="tv_QuestionRepo">Question</string>
    <string name="tv_AnswerRepo">Answer</string>
    <string name="tv_SubQuestionRepo">SubQuestion</string>
    <string name="tv_true">True</string>
    <string name="tv_false">False</string>

    <!-- Dialog report -->
    <string name="dialog_ReportTitle">Report question problem</string>
    <string name="dialog_ReportMessage">Enter a message here ...</string>
    <string name="dialog_BtnOK">OK</string>
    <string name="dialog_BtnCancel">Cancel</string>

    <string name="btn_Delete">Delete</string>
    <string name="confirm_delete">Are you sure delete the item?</string>


</resources>