<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_delete"
        android:padding="@dimen/size_16dp"
        android:layout_marginBottom="@dimen/size_16dp"
        android:textColor="@color/Green"
        android:textStyle="bold"
        android:textSize="@dimen/size_16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_16dp"
            android:textColor="@color/white"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/dialog_BtnOK"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/dialog_BtnCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_16dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>