<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/size_8dp">
    <LinearLayout
        android:id="@+id/row_1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/size_48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/size_100dp"
            android:layout_height="@dimen/size_100dp"
            app:srcCompat="@mipmap/ic_launcher"/>
    </LinearLayout>
    <LinearLayout
        android:id="@id/row_2"
        android:layout_below="@id/row_1"
        android:layout_marginTop="@dimen/size_48dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:background="@drawable/edittext_bg"
            android:hint="@string/username_hint"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:padding="@dimen/size_8dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/size_20dp" />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_username"
            android:layout_marginTop="@dimen/size_4dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="@dimen/size_8dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/size_20dp" />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_password"
            android:layout_marginTop="@dimen/size_36dp"
            android:layout_marginBottom="@dimen/size_24dp"
            android:text="@string/btn_login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size_20dp" />
        <TextView
            android:id="@+id/tv_forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_Login"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/colorText"
            android:textSize="@dimen/size_20dp" />
        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_forgotpassword"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="@dimen/size_20dp" />
    </LinearLayout>
</RelativeLayout>