<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:padding="@dimen/size_8dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="@dimen/size_8dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/size_20dp" />
        <Button
            android:id="@+id/btn_resetpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_36dp"
            android:layout_marginBottom="@dimen/size_24dp"
            android:text="@string/btn_resetpassword"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size_20dp" />
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/vt_tologin"
            android:textColor="@color/colorText"
            android:textSize="@dimen/size_20dp"/>
    </LinearLayout>
</RelativeLayout>