<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTopicFragment">
    <RelativeLayout
        android:orientation="vertical"
        android:padding="@dimen/size_8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:id="@id/row_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/tv_EditAQuestion"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="@dimen/size_8dp"
                android:textSize="@dimen/size_16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageButton
                android:id="@+id/imb_back_to_list"
                android:layout_marginTop="@dimen/size_8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_back"
                android:background="@color/colorPrimary"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/row_2"
            android:layout_below="@id/row_1"
            android:layout_marginTop="@dimen/size_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/tv_EditQuestionId"
                android:padding="@dimen/size_8dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/size_12dp"
                android:layout_width="@dimen/size_100dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_QuestionId"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/size_8dp"
                android:textSize="@dimen/size_12dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/row_3"
            android:layout_below="@id/row_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/tv_EditQuestionTitle"
                android:padding="@dimen/size_8dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/size_12dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_QuestionTitle"
                android:background="@drawable/edittext"
                android:padding="@dimen/size_8dp"
                android:textSize="@dimen/size_12dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/row_4"
            android:layout_below="@id/row_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/tv_EditQuestionBody"
                android:layout_marginTop="@dimen/size_36dp"
                android:padding="@dimen/size_8dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/size_12dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_QuestionBody"
                android:gravity="top"
                android:background="@drawable/edittext"
                android:layout_marginTop="@dimen/size_12dp"
                android:padding="@dimen/size_8dp"
                android:textSize="@dimen/size_12dp"
                android:inputType="textMultiLine"
                android:lines="6"
                android:scrollbars="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/row_5"
            android:layout_below="@id/row_4"
            android:layout_marginTop="@dimen/size_8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/tv_EditQuestionCourse"
                android:padding="@dimen/size_8dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/size_12dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/sn_courses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_12dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/row_6"
            android:layout_below="@id/row_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/tv_EditQuestionTopic"
                android:padding="@dimen/size_8dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/size_12dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/sn_topics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size_12dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/row_7"
            android:layout_below="@id/row_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/tv_EditQuestionDifficulty"
                android:padding="@dimen/size_8dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/size_12dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/sn_difficulties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/difficulties"
                android:textSize="@dimen/size_12dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/row_8"
            android:layout_below="@id/row_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/tv_EditQuestionType"
                android:padding="@dimen/size_8dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/size_12dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/sn_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/types"
                android:textSize="@dimen/size_12dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/size_8dp"
            android:id="@+id/row_9"
            android:layout_below="@id/row_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/btn_UpdateQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_EditUpdateAnswers"/>
            <Button
                android:id="@+id/btn_CancelQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_ClearAnswers"/>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>