<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCourseFragment">
    <RelativeLayout
        android:padding="@dimen/size_8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:id="@id/row_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/tv_EditACourse"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="@dimen/size_8dp"
                android:textSize="@dimen/size_16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageButton
                android:id="@+id/imb_back_to_list"
                android:layout_marginTop="@dimen/size_8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_back"
                android:background="@color/colorPrimary"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/row_2"
            android:layout_below="@id/row_1"
            android:layout_marginTop="@dimen/size_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/tv_EditCourseId"
                android:padding="@dimen/size_8dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/size_12dp"
                android:layout_width="@dimen/size_100dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_CourseId"
                android:padding="@dimen/size_8dp"
                android:textSize="@dimen/size_12dp"
                android:textColor="@color/colorPrimary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/row_3"
            android:layout_below="@id/row_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/tv_EditCourseName"
                android:padding="@dimen/size_8dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/size_12dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_CourseName"
                android:background="@drawable/edittext"
                android:padding="@dimen/size_8dp"
                android:textSize="@dimen/size_12dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/size_8dp"
            android:id="@id/row_4"
            android:layout_below="@id/row_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/btn_SubmitCourse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_EditCourse"/>
            <Button
                android:id="@+id/btn_CancelCourse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_ClearCourse"/>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>